<?php


interface ProductInterface
{
    function getDescription();
    function getPrice();
    function getPicture();
    function sell();
}